# ai-writer

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPEC.md
backend/: pyproject.toml  test_quick.py
backend/plugins/chapter_reminder/: plugin.json  plugin.py
backend/plugins/custom_instruction/: config.json.example  plugin.json  plugin.py
backend/plugins/hello_world/: config.json  plugin.json  plugin.py
backend/plugins/voice_input/: plugin.json  plugin.py
backend/plugins/writing_stats/: plugin.json  plugin.py  stats_handler.py
backend/src/: __init__.py
backend/src/api/: __init__.py  chapters.py  characters.py  export_import.py  factions.py  fandom.py  foreshadowings.py  image_gen.py  inspirations.py  locations.py  main.py  outlines.py  plugins.py  projects.py  relationships.py  reviews.py  sensitive_words.py  timeline_events.py  world_settings.py  writing.py
backend/src/core/: __init__.py  config.py  database.py  vector_db.py
backend/src/models/: __init__.py  chapter.py  character.py  faction.py  foreshadowing.py  inspiration.py  location.py  outline.py  project.py  relationship.py  sensitive_word.py  timeline_event.py  world_setting.py
backend/src/plugins/: __init__.py  daily_backup.py  word_count_goal.py
backend/src/schemas/: __init__.py  chapter.py  character.py  image_gen.py  inspiration.py  location.py  outline.py  plugin.py  project.py  relationship.py  review.py  world_setting.py
backend/src/services/: alias_merger.py  chapter_vector.py  export_import.py  fandom.py  image_gen.py  llm.py  map_generator.py  outline_optimizer.py  (+6 more)
(+64 files in other folders)
